--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^1.1.3",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "react": "^18.2.0",
